# Linux-process-manager

./: Cargo.toml  README.md
src/: agent.rs  alert.rs  container_view.rs  coordinator.rs  criu_manager.rs  filter_parser.rs  graph.rs  gui.rs  main.rs  namespace_view.rs  process.rs  process_group.rs  process_log.rs  profile.rs  scheduler.rs  ui.rs
